added transitions initial example

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
 <!-- Path to your app js-->
 <!--<script type="text/javascript" src="path/to/my-app.js"></script>-->
 <script src="js/main.js"></script>
+<script src="fetch.js"></script>
 
 </body>
 </html>
