--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="framework7.min.css">
 
-    <link rel="stylesheet" href="css/main.css">
+    <!--<link rel="stylesheet" href="css/main.css">-->
     <link rel="stylesheet" href="css/main_ext.css">
-    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
-    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
 
     <!-- Required meta tags-->
     <meta charset="utf-8">
@@ -19,7 +16,6 @@
     <!-- Your app title -->
     <title>My App</title>
     <!-- Path to Framework7 Library CSS-->
-    <link rel="stylesheet" href="framework7.min.css">
     <!-- Path to your custom app styles-->
     <!--<link rel="stylesheet" href="path/to/my-app.css">-->
 </head>
